crates/analyzer/tests/snapshots/errors__invalid_impl_location.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: illegal `impl`. Either type or trait must be in the same ingot as the `impl`
  ┌─ compile_errors/invalid_impl_location.fe:3:1
  │
3 │ impl Dummy for Context {}
  │ ^^^^^^^^^^^^^^^^^^^^^^ Neither `Context` nor `Dummy` are in the ingot of the `impl` block


